2011-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* R/bdt.R: Added a few accessor functions for R

	* src/RcppBDT.cpp: Added fromDate() setter

	* R/zzz.R: Make both date module and a class global
	* demo/RcppBDT.R: Adapted demo accordingly

2011-01-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.win: Added -I$(BOOSTLIB)

2011-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDT.cpp: Modified modules wrapper name to make it clearer
	which function set and which functions get or convert data

	* tests/RcppBDT.R: Define simplest test of just calling demo()

	* inst/include/RcppBDT.h: Defined compile-time variable to allow use
	of string functions; when not defined we use only pure C++ template
	and do not need to link against the C++ library from Boost Date.Time
	* src/RcppBDT.cpp: Make parts of code depend upon new compile variable
	* src/Makevars: No longer link with -lboost_date_time
	* demo/RcppBDT.R: Comment-out two string-using functions

2011-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* demo/RcppBDT.R: Added RcppBDT demo showing a few functions

2010-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* Added a few more functions

	* DESCRIPTION: Set up as a simple package

2010-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* Some first exploration with Rcpp modules around Boost Date.Time
	using only inline